ext/soap/php_xml.h
@@ -30,11 +30,12 @@
 xmlDocPtr soap_xmlParseFile(const char *filename);
 xmlDocPtr soap_xmlParseMemory(const void *buf, size_t size);
 
-xmlNsPtr attr_find_ns(xmlAttrPtr node);
 xmlNsPtr node_find_ns(xmlNodePtr node);
 int attr_is_equal_ex(xmlAttrPtr node, const char *name, const char *ns);
 int node_is_equal_ex(xmlNodePtr node, const char *name, const char *ns);
-xmlAttrPtr get_attribute_ex(xmlAttrPtr node,const char *name, const char *ns);
+int node_is_equal_ex_one_of(xmlNodePtr node, const char *name, const char *const *namespaces);
+xmlAttrPtr get_attribute_any_ns(xmlAttrPtr node, const char *name);
+xmlAttrPtr get_attribute_ex(xmlAttrPtr node, const char *name, const char *ns);
 xmlNodePtr get_node_ex(xmlNodePtr node, const char *name, const char *ns);
 xmlNodePtr get_node_recursive_ex(xmlNodePtr node, const char *name, const char *ns);
 xmlNodePtr get_node_with_attribute_ex(xmlNodePtr node, const char *name, const char *name_ns, const char *attribute, const char *value, const char *attr_ns);
